fix(pinterest): one-bar-pill text contrast

--- a/styles/pinterest/catppuccin.user.less
+++ b/styles/pinterest/catppuccin.user.less
@@ -321,6 +321,10 @@
       background-color: @base;
     }
 
+    button[data-test-id="one-bar-pill"] {
+      --color-text-dark: var(--color-text-inverse);
+    }
+
     div[data-test-id="product-price-filter-one-bar-pill"] button[data-test-id="one-bar-pill"] svg {
       color: @base !important;
     }
